# dbus-util

./: CMakeLists.txt  README.md
cmake/: FindDBUS.cmake
include/: dbus-util.h
src/: dbus-util.c  vec.c  vec.h
test/: CMakeLists.txt  test_containers.c  test_containers.xml  test_ints.c  test_ints.xml  test_properties.c  test_properties.xml  test_str.c  test_str.xml
